# xia-daq-gui

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  download_firmware.sh  find_firmware.sh
0.1/: 404.html  index.html  sitemap.xml
0.1/compile_plxsdk_ubuntu/: index.html
0.1/search/: search_index.json
0.1/user_guide/: index.html
1.0/: 404.html  index.html  sitemap.xml
1.0/compile_plxsdk_ubuntu/: index.html
1.0/daq_walk_through/: index.html
1.0/example_details/: index.html
1.0/getting_started/: index.html
1.0/memory_model/: index.html
1.0/online_receiver/: index.html
1.0/search/: search_index.json
1.0/template_walk_through/: index.html
docs/: mkdocs.yml
docs/docs/: compile_plxsdk_ubuntu.md  daq_walk_through.md  example_details.md  getting_started.md  index.md  memory_model.md  online_receiver.md  template_walk_through.md
docs/docs/javascripts/: mathjax.js
examples/: CMakeLists.txt  alpha_source_dssd_global.h  alpha_source_dssd_simulation.cpp  online_example.cpp
include/: daq-packet.h  daq_packet.h  decode_event.h  event.h  linkdef.h  online_data_receiver.h  signal_handler.h  termination-handler.h  termination_handler.h
parset/: Pixie16msg.txt  Run.config  cfgPixie16.origin.txt  cfgPixie16.txt
parset/exp/: DSPpar.thre
src/: CMakeLists.txt  online_data_receiver.cpp  termination-handler.cpp  termination_handler.cpp
template/: CMakeLists.txt  online_template.cpp
